# tauri-plugin-terminal-

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  TERMINAL_FIXES.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.hive-mind/: hive.db  hive.db-shm  hive.db-wal  research-iterm2-ohmyzsh-features.md
.hive-mind/sessions/: hive-mind-prompt-swarm-1767115132377-397vawwfx.txt  session-1767115132378-vxgq1hkaa-auto-save-1767115162387.json
docs/: docusaurus.config.ts  package.json  sidebars.ts
docs/docs/: getting-started.md  intro.md
docs/docs/api/: rust.md  typescript.md
docs/docs/examples/: advanced.md  basic.md
docs/docs/guides/: integration.md  multi-session.md  theming.md
docs/src/css/: custom.css
guest-js/: api.ts  hooks.ts  index.ts  types.ts
react/src/: Terminal.tsx  index.ts
react/src/themes/: dark.ts  index.ts  light.ts
rust/: Cargo.toml  build.rs
rust/permissions/: default.toml
rust/permissions/autogenerated/: reference.md
rust/permissions/autogenerated/commands/: destroy_session.toml  get_screen.toml  get_session_count.toml  list_themes.toml  poll_session.toml  resize_session.toml  write_bytes_to_session.toml  write_to_session.toml
rust/permissions/schemas/: schema.json
rust/src/: commands.rs  error.rs  events.rs  lib.rs  plugin.rs  pty.rs  session.rs  terminal.rs  theme.rs  types.rs
