[package]
name = "tauri-plugin-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
links = "tauri-plugin-terminal"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Tauri
tauri = { version = "2.1", default-features = false }
tauri-plugin = { version = "2.0", features = ["build"] }

# Terminal emulation
vt100 = "0.15"

# PTY handling
portable-pty = "0.8"

# Async runtime
tokio = { version = "1", features = ["sync", "time", "rt"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"

# Utilities
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"

[build-dependencies]
tauri-plugin = { version = "2.0", features = ["build"] }

[features]
default = []
